<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/black"
    android:padding="16dp"
    tools:context=".detail.DetailMovieActivity">

    <ImageView
        android:id="@+id/image_poster"
        android:layout_width="130dp"
        android:layout_height="200dp"
        android:src="@drawable/poster_alita"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/title"
        android:textColor="#FF3C00"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toEndOf="@+id/image_poster"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        android:textColor="#C1C1C1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_title"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <TextView
        android:id="@+id/text_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        tools:text="@string/release"
        android:textColor="#C1C1C1"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/text_genre"
        app:layout_constraintTop_toBottomOf="@+id/text_genre" />

    <TextView
        android:id="@+id/text_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/duration"
        android:textColor="#C1C1C1"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/text_release"
        app:layout_constraintTop_toBottomOf="@+id/text_release" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/overview"
        android:textColor="#C1C1C1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_poster" />

    <TextView
        android:id="@+id/text_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/desc"
        android:textAlignment="viewStart"
        android:textColor="#C1C1C1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:foregroundGravity="bottom"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:backgroundTint="@color/purple_500"
        app:tint="@color/white"
        android:contentDescription="@string/button_favorite" />

</androidx.constraintlayout.widget.ConstraintLayout>