<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_activity_detail_course">Detail Movie</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Fantastic Beasts: The Crimes of Grindelwald</string>
    <string name="release">02/14/2019 (US)</string>
    <string name="duration">2h 2m</string>
    <string name="overview">Overview</string>
    <string name="desc">When Alita awakens with no memory of who she is in a future world she does not recognize, she is taken in by Ido, a compassionate doctor who realizes that somewhere in this abandoned cyborg shell is the heart and soul of a young woman with an extraordinary past.</string>
    <string name="genre">Action, Science Fiction, Adventure</string>
    <string name="tvs">Tv Show</string>
    <string name="movie">Movie</string>
    <string name="button_favorite">Button Favorite</string>
    <string name="menu_favorite">Favorite</string>
</resources>